--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name="com.wunder.WLLauncherActivity"
             android:label="@string/title_activity_maps"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/MapAppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
